--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,25 +1,9 @@
-#sidebar {
-	text-align: center;
-	padding-left: 100px;
-	padding-right: 100px;
-	padding-bottom: 100px;
-	padding-top: 25px;
-}
-#container {
-	padding: 40px, 0px, 40px, 100px;
-	overflow: hidden;
-	margin: 25px auto;
-	background: #FFFFFF;
-}
-#slogan {
-	text-align: center;
-	font-style: normal;
-	font-family: "avenir";
-	font-size: 17px;
-}
+@import url('https://fonts.googleapis.com/css?family=Assistant:200,300,400,700|Merriweather:300,400,700');
+
+
 header {
 	text-align: center;
-	padding:40px;
+	padding:10px;
 }
 body {
     background-color:#FFFFFF;
@@ -27,7 +11,7 @@ body {
 
 h1 {
 	color: #030302;
-	font-family: 'Lucida Sans Unicode', sans-serif;
+	font-family: 'Assistant', sans-serif;
 	font-weight: bold;
 	letter-spacing: 4px;
 	text-transform: uppercase;
@@ -44,7 +28,7 @@ h4 {
 nav {
 	text-align: center;
 	color: #30302;
-	font-family: "avenir", sans-serif;
+	font-family: 'Assistant', sans-serif;
 	font-weight: bold;
 }
 
@@ -54,8 +38,11 @@ a{
 }
 p {
 	color:slategray;
+	font-family: 'Assistant', sans-serif;
 	font-weight: lighter;
 	text-align: left;
+	line-height: 1.5em;
+	margin:2em;
 }
 
 .photos{
@@ -130,4 +117,24 @@ ul.nav li:first-child a{
 }
 ul.nav li:last-child a {
     border:none;
+}
+
+#sidebar {
+	text-align: center;
+	padding-left: 100px;
+	padding-right: 100px;
+	padding-bottom: 100px;
+	padding-top: 25px;
+}
+#container {
+	padding: 40px, 0px, 40px, 70px;
+	overflow: hidden;
+	margin: 25px auto;
+	background: #FFFFFF;
+}
+#slogan {
+	text-align: center;
+	font-style: normal;
+	font-family: 'Assistant', sans-serif;
+	font-size: 17px;
 }
