--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -72,12 +72,26 @@ p {
 }
 
 
-.social nav {
+ul.social {
 	text-decoration: none;
-	font-family: "helvetica;
+	display: inline-block;
 	color: #000;
 	font-size: 10px;
 	text-align: center;
+}
+
+ul.social a {
+    text-align:center;
+    display:inline-block;
+    padding-bottom:13px;
+    padding-top:12px;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+ul.social a:hover { 
+    background: #fff;
+    color: #f0f;
+    border:none;
 }
 
 ul.nav {
@@ -91,11 +105,11 @@ ul.nav {
     font-family: sans-serif; 
 }
 
-.nav li { 
+ul.nav li { 
         display:inline;
     }
 
-.nav a {
+ul.nav a {
     width:20%;
     text-align:center;
     display:inline-block;
@@ -105,7 +119,7 @@ ul.nav {
     border-right: 1px solid #fff;
 }
 
-.nav a:hover { 
+ul.nav a:hover { 
     background: #fff;
     color: #f0f;
     border:none;
