--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -32,6 +32,7 @@ aside {
 }
 a{
 	text-decoration: none;
+    display: block;
 	color:#000;
 }
 h2 {
@@ -45,7 +46,16 @@ h2 {
 footer {
     background-color: #FF957E;
 }
-
+#one {
+    float:left;
+    width:10%;
+    padding: 10px;
+}
+#two {
+    float:left;
+    width: 70%;
+    padding: 10px;
+}
 .photos{
     height:530px;
     width:100%;
@@ -93,35 +103,30 @@ ul.social a:hover {
 }
 
 aside.nav {
-    width:100%;
-    margin:0 auto;
-    padding:0;
+    width:200px;
+    padding:10px;
+    float:left;
     list-style:none;
-    display:block;
     background-color:#fff;
-    text-align:left;
     font-family: sans-serif; 
     line-height: 2.5em;
 }
 
 aside.nav li { 
         display:block;
+        float:left;
     }
 
 aside.nav a {
-    width:20%;
-    text-align:left;
-    padding-bottom:13px;
-    padding-top:12px;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
+    width:200px;
+    padding: .8em 2em;
 }
 
 aside.nav a:hover { 
     background: #fff;
     color: #f0f;
     border:none;
-    width:20%
+    width:50%
 }
 
 aside.nav li:first-child a{
