--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -14,6 +14,7 @@ header {
 h1 {
 	color: #030302;
 	font-family: 'Assistant', sans-serif;
+    font-size: 3em;
 	font-weight: bold;
 	letter-spacing: 4px;
 	text-transform: uppercase;
@@ -24,7 +25,9 @@ nav {
     background-color:#fff;
 	text-align: center;
 	color: #30302;
+    text-transform: uppercase;
 	font-family: 'Assistant', sans-serif;
+    letter-spacing: .05em;
 	font-weight: bold;
     word-spacing: 4em;
     margin-right: 10em;
@@ -37,23 +40,29 @@ a{
 	color:#000;
 }
 
-}
-h2 {
+h3 {
 	color:slategray;
-	font-family: 'Assistant', sans-serif;
+	font-family: 'Merriweather', sans-serif;
+    letter-spacing: 1px;
 	font-weight: lighter;
-	text-align: left;
-	line-height: 1.5em;
-	margin:2em;
-
+	line-height: 1em;
+	margin-top:0.5em;
 }
+
 footer {
+    float:none;
+    text-align: right;
     background-color: #fff;
     clear:both;
+    font-family: 'Merriweather';
+    font-size: .05em;
     margin-left: 10em;
     margin-top: 3em;
     margin-bottom: 3em;
     margin-right: 10em;
+}
+#logo {
+    width:10em;
 }
 #one {
     float:left;
@@ -104,7 +113,7 @@ aside.nav {
     font-size: 1em;
     list-style:none;
     background-color:#fff;
-    font-family: sans-serif; 
+    font-family: 'Merriweather'; 
     line-height: 2.5em;
 }
 
