--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,12 @@ body {
   font-weight: 300;
 }
 
-
 #wrapper {
-  max-width: 940px;
+  max-width: 100%;
   max-height: 100vh;
   margin: 0 auto;
-  padding: 0 10%;
-  overflow: auto;
+  padding: 0 20%;
+  overflow: scroll;
 }
 
 a {
@@ -34,9 +33,17 @@ a:hover {
 
 img {
   max-width: 100%;
-  border-radius: 6px 6px 0 0;
+  border-radius: 2px 2px 0 0;
 }
 
+li {
+  color:#	#585858;
+  opacity: .6;
+  text-transform: uppercase;
+  font-size: .5em;
+  line-height: 1.25em;
+  padding: 1em;
+}
 
 /**********************************
 BCKG
@@ -48,7 +55,7 @@ BCKG
   position: absolute;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin-top: auto;
   overflow: hidden;
 }
@@ -67,8 +74,8 @@ BCKG
   position: absolute;
   list-style: none;
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   background-color: rgba(86, 238, 201, .15);
   bottom: -160px;
   -webkit-animation: square 10s infinite;
@@ -78,8 +85,8 @@ BCKG
 }
 .bg-bubbles li:nth-child(1) {
   left: 10%;
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   -webkit-animation-delay: 4s;
           animation-delay: 4s;
   -webkit-animation-duration: 17s;
@@ -115,23 +122,23 @@ BCKG
 }
 .bg-bubbles li:nth-child(6) {
   left: 80%;
-  width: 120px;
-  height: 120px;
+  width: 160px;
+  height: 160px;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
   background-color: rgba(136, 220, 210, 0.5);
 }
 .bg-bubbles li:nth-child(7) {
   left: 32%;
-  width: 160px;
-  height: 160px;
+  width: 40px;
+  height: 40px;
   -webkit-animation-delay: 7s;
           animation-delay: 7s;
 }
 .bg-bubbles li:nth-child(8) {
   left: 55%;
-  width: 20px;
-  height: 20px;
+  width: 80px;
+  height: 80px;
   -webkit-animation-delay: 15s;
           animation-delay: 15s;
   -webkit-animation-duration: 40s;
@@ -140,8 +147,8 @@ BCKG
 }
 .bg-bubbles li:nth-child(9) {
   left: 25%;
-  width: 10px;
-  height: 10px;
+  width: 40px;
+  height: 40px;
   -webkit-animation-delay: 2s;
           animation-delay: 2s;
   -webkit-animation-duration: 40s;
