--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,7 @@ a {
 }
 
 a:hover {
-  color: #4BE7BD;
-  opacity: .5;
+  color: #8B51FF;
 }
 
 
@@ -42,7 +41,7 @@ li {
   text-transform: uppercase;
   font-size: .5em;
   line-height: 1.25em;
-  padding: 1em;
+  padding: 2em;
 }
 
 /**********************************
@@ -76,7 +75,7 @@ BCKG
   display: block;
   width: 60px;
   height: 60px;
-  background-color: rgba(86, 238, 201, .15);
+  background-color: rgba(136, 220, 210, 0.15);
   bottom: -160px;
   -webkit-animation: square 10s infinite;
   animation: square 10s infinite;
@@ -85,22 +84,23 @@ BCKG
 }
 .bg-bubbles li:nth-child(1) {
   left: 10%;
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   -webkit-animation-delay: 4s;
           animation-delay: 4s;
   -webkit-animation-duration: 17s;
           animation-duration: 17s;
-  background-color: rgba(136, 220, 210, 0.9);
+  background-color: rgba(136, 220, 210, 0.7);
 }
 .bg-bubbles li:nth-child(2) {
   left: 20%;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   -webkit-animation-delay: 2s;
           animation-delay: 2s;
   -webkit-animation-duration: 17s;
           animation-duration: 17s;
+  background-color: rgba(139, 81, 255, 0.4);
 }
 .bg-bubbles li:nth-child(3) {
   left: 25%;
@@ -108,59 +108,63 @@ BCKG
   height: 80px;
   -webkit-animation-delay: 4s;
           animation-delay: 4s;
-  background-color: rgba(136, 220, 210, 0.25);
+  background-color: rgba(136, 220, 210, 0.35);
 }
 .bg-bubbles li:nth-child(4) {
   left: 40%;
-  width: 60px;
-  height: 60px;
+  width: 10px;
+  height: 10px;
   -webkit-animation-duration: 22s;
           animation-duration: 22s;
 }
 .bg-bubbles li:nth-child(5) {
   left: 70%;
+  width: 70px;
+  height: 70px;
+  background-color: rgba(139, 81, 255, 0.35);
 }
 .bg-bubbles li:nth-child(6) {
   left: 80%;
-  width: 160px;
-  height: 160px;
+  width: 130px;
+  height: 130px;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
   background-color: rgba(136, 220, 210, 0.5);
 }
 .bg-bubbles li:nth-child(7) {
   left: 32%;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   -webkit-animation-delay: 7s;
           animation-delay: 7s;
 }
 .bg-bubbles li:nth-child(8) {
   left: 55%;
-  width: 80px;
-  height: 80px;
+  width: 10px;
+  height: 10px;
   -webkit-animation-delay: 15s;
           animation-delay: 15s;
   -webkit-animation-duration: 40s;
           animation-duration: 40s;
-  background-color: rgba(136, 220, 210, 0.15);
+  background-color: rgba(139, 81, 255, 0.25);
 }
 .bg-bubbles li:nth-child(9) {
   left: 25%;
-  width: 40px;
-  height: 40px;
+  width: 15px;
+  height: 15px;
   -webkit-animation-delay: 2s;
           animation-delay: 2s;
   -webkit-animation-duration: 40s;
           animation-duration: 40s;
+  background-color: rgba(136, 220, 210, 0.5);
 }
 .bg-bubbles li:nth-child(10) {
   left: 90%;
-  width: 160px;
-  height: 160px;
+  width: 140px;
+  height: 140px;
   -webkit-animation-delay: 11s;
           animation-delay: 11s;
-  background-color: rgba(136, 220, 210, 0.5);
+  background-color: rgba(139, 81, 255, 0.2);
 }
 @-webkit-keyframes square {
   0% {
@@ -268,9 +272,9 @@ h1, h2 {
 h3, h4, h5 {
   color: #3A3B3C;
 }
-/* links */
+/* links  8B51FF; */
 a {
-  color: #8B51FF;
+  color: #4BE7BD;
 }
 
 /* nav link */
